--- a/BoundProject/styles/myStyle.css
+++ b/BoundProject/styles/myStyle.css
@@ -533,6 +533,10 @@ details[open] summary:hover::after {
     #Ptext2 {
         margin-right: 16px;
     }
+    
+        details {
+        padding: 28px 5px 28px 1px;
+    }
 
     #icons {
         padding-top: 5px;
