--- a/BoundProject/styles/myStyle.css
+++ b/BoundProject/styles/myStyle.css
@@ -535,7 +535,7 @@ details[open] summary:hover::after {
     }
     
     details {
-        padding: 15px 15px;
+        padding: 10px 20px 10px;
     }
 
     #icons {
